<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/divisor_topo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="?attr/colorOutline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/label_result"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="?attr/colorOutline" />
    </LinearLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cartao_valor_total"
        style="?attr/materialCardViewFilledStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        app:cardBackgroundColor="?attr/colorPrimaryContainer"
        app:layout_constraintTop_toBottomOf="@id/divisor_topo"
        app:shapeAppearance="?attr/shapeAppearanceCornerLarge">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/dimen_20">

            <TextView
                android:id="@+id/texto_rotulo_valor_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:alpha="0.8"
                android:text="@string/card_label_total_value"
                android:textAllCaps="true"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/text_11"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/texto_simbolo_moeda_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_12"
                android:text="@string/currency_symbol"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/text_18"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/texto_rotulo_valor_total" />

            <TextView
                android:id="@+id/texto_valor_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen_8"
                android:text="@string/default_decimal_value"
                android:textColor="?attr/colorOnPrimaryContainer"
                android:textSize="@dimen/text_38"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@id/texto_simbolo_moeda_total"
                app:layout_constraintStart_toEndOf="@id/texto_simbolo_moeda_total"
                app:layout_constraintTop_toTopOf="@id/texto_simbolo_moeda_total"
                app:layout_constraintVertical_bias="0.5" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>