<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/divisor_topo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="?attr/colorOutline" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing="0.1"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:text="@string/label_frete"
            android:textAllCaps="true"
            android:textColor="?attr/colorOnSurfaceVariant"
            android:textSize="12sp" />

        <View
            android:layout_width="0dp"
            android:layout_height="0.5dp"
            android:layout_weight="1"
            android:background="?attr/colorOutline" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linha_cards_frete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_10"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divisor_topo">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cartao_frete_por_animal"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/dimen_4"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorPrimaryContainer"
            app:shapeAppearance="?attr/shapeAppearanceCornerLarge">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16">

                <TextView
                    android:id="@+id/texto_rotulo_frete_por_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.7"
                    android:text="@string/card_label_unit_value_frete"
                    android:textAllCaps="true"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="@dimen/text_10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/texto_simbolo_moeda_frete_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_symbol"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintBottom_toBottomOf="@id/texto_valor_frete_por_animal"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/texto_valor_frete_por_animal"
                    app:layout_constraintVertical_bias="0.7" />

                <TextView
                    android:id="@+id/texto_valor_frete_por_animal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/default_decimal_value"
                    android:textColor="?attr/colorOnPrimaryContainer"
                    android:textSize="@dimen/text_22"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/texto_simbolo_moeda_frete_animal"
                    app:layout_constraintTop_toBottomOf="@id/texto_rotulo_frete_por_animal" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cartao_frete_total"
            style="?attr/materialCardViewFilledStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_4"
            android:layout_weight="1"
            app:cardBackgroundColor="?attr/colorSurfaceContainerHigh"
            app:shapeAppearance="?attr/shapeAppearanceCornerLarge">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dimen_16">

                <TextView
                    android:id="@+id/texto_rotulo_frete_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:alpha="0.8"
                    android:text="@string/card_label_unit_total_value_frete"
                    android:textAllCaps="true"
                    android:textSize="@dimen/text_10"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/texto_simbolo_moeda_frete_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/currency_symbol"
                    android:textSize="@dimen/text_14"
                    app:layout_constraintBottom_toBottomOf="@id/texto_valor_frete_total"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@id/texto_valor_frete_total"
                    app:layout_constraintVertical_bias="0.7" />

                <TextView
                    android:id="@+id/texto_valor_frete_total"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen_4"
                    android:layout_marginTop="@dimen/dimen_4"
                    android:text="@string/default_decimal_value"
                    android:textSize="@dimen/text_22"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@id/texto_simbolo_moeda_frete_total"
                    app:layout_constraintTop_toBottomOf="@id/texto_rotulo_frete_total" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>